--- a/Herbavi/package.json
+++ b/Herbavi/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "~10.1.3",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.1.3",
+    "@angular/common": "^10.0.0",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
@@ -33,9 +33,10 @@
     "@angular-devkit/build-angular": "~0.1001.3",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
-    "@types/node": "^12.11.1",
+    "@angular/localize": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
